Fix clipping avatar decoration

--- a/src/theme/_index.scss
+++ b/src/theme/_index.scss
@@ -179,6 +179,10 @@
 						var(--rs-avatar-shape)
 				);
 			}
+			.avatarDecoration_c51b4e img {
+				clip-path: none;
+				overflow: visible;
+			}
 		}
 
 		// Large ring (user profile)
@@ -200,6 +204,10 @@
 						var(--rs-avatar-shape)
 				);
 			}
+			.avatarDecoration_c51b4e img {
+				clip-path: none;
+				overflow: visible;
+			}
 		}
 
 		// Fixes DBFBD chat avatars
@@ -211,6 +219,10 @@
 				calc(var(--rs-small-spacing) + 1px) calc(var(--rs-small-spacing) + 1px) round
 					var(--rs-avatar-shape)
 			);
+			.avatarDecoration_c51b4e img {
+				clip-path: none;
+				overflow: visible;
+			}
 		}
 
 		// UserTypingAvatars
@@ -233,7 +245,7 @@
           height: 12px;
           top: 30%;
         }
-      } 
+      }
       // Private chats and users sidebar
 			&[width='32'] {
         &:after {
@@ -257,7 +269,7 @@
 				}
 			}
 
-		  &:after { 
+		  &:after {
         content: '';
 				display: var(--rs-phone-visible, block);
 				mask: url('data:image/svg+xml; utf-8,<svg aria-hidden="true" focusable="false" data-prefix="fas" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M272 0H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h224c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48zM160 480c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32zm112-108c0 6.6-5.4 12-12 12H60c-6.6 0-12-5.4-12-12V60c0-6.6 5.4-12 12-12h200c6.6 0 12 5.4 12 12v312z"></path></svg>')
